--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="disable-bounce">
 <head>
-  <title>Carbonized Red</title>
+  <title>Jacaranda Live</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,11 +18,11 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="google" content="notranslate">
 
-  <meta name="Description" content="Building the perfect carbonized progressive web apps used for instant immersive marketing &amp; promotion of any creators, influencers or musicians alike" />
+  <meta name="Description" content="Playing the music you love" />
   <meta name="Author" content="Martin Myburgh" />
   <meta name="Copyright" content="Carbonized Red 2023" />
   <meta name="Keywords" content="Perfect, Carbonized, Progressive Web App, Instant, Immersive, Marketing, Promotion, Creators, Influencers, Musicians" />
-  <meta name="Subject" content="Carbonized Red" />
+  <meta name="Subject" content="Jacaranda Live" />
 
   <meta property="og:url"  content="https://carbonized.red" />
   <meta property="og:type" content="website" />
@@ -38,7 +38,7 @@
   --> 
 	
   <meta name="theme-color" content="purple" />
-  <meta name="apple-mobile-web-app-title" content="Carbonized Red">
+  <meta name="apple-mobile-web-app-title" content="Jacaranda Live">
 
   <link rel="icon" href="favicon.ico" />
   <link rel="icon" type="image/png" sizes="16x16" href="./icons/apple-touch-icon.png">
