--- a/listen-live.html
+++ b/listen-live.html
@@ -10,10 +10,10 @@
 
 		gtag('config', 'G-PZWWSYRHSF');
 	</script>
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!--<meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Jacaranda FM Live">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="telephone=no">-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0">
     <title>Listen Live</title>
