--- a/mobile.html
+++ b/mobile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://turntable.kagiso.io/core/css/mobile/listen_live_page.css">
@@ -330,11 +330,11 @@ learn how we handle your data.
 <div class="player-metadata">
 <div class="player-details">
 <div class="player-controls">
-<div class="reactions" data-action="like" style="display: inline-block;">
+<!--<div class="reactions" data-action="like" style="display: inline-block;">
 <span class="icon-like" data-action="like">
 <img id="like-btn" src="https://turntable.kagiso.io/images/JacarandaFM_ThumbsUpWhiteSmall80x80.original.original.png" alt="Like" width="80" height="80" />
 </span>
-</div>
+</div>-->
 <button id="play-button">
 <span class="player-button-icons active default">
 <svg width="30px" height="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 330 330" style="enable-background:new 0 0 330 330; fill: #ffffff; margin-top: 2px; margin-left:3px" xml:space="preserve">
@@ -416,11 +416,11 @@ learn how we handle your data.
 </svg>
 </span>
 </button>
-<div class="reactions" data-action="dislike" style="display: inline-block;">
+<!--<div class="reactions" data-action="dislike" style="display: inline-block;">
 <span class="icon-like" data-action="dislike">
 <img id="dislike-btn" src="https://turntable.kagiso.io/images/JacarandaFM_ThumbsDownWhiteSmall80x80.original.original.png" alt="Dislike" width="80" height="80" />
 </span>
-</div>
+</div>-->
 </div>
 <div class="player-action action">Paused</div>
 </div>
