--- a/desktop.html
+++ b/desktop.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head itemscope itemtype="http://schema.org/WebSite">
-<meta charset="utf-8" />
+<meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title itemprop="name">Listen to Jacaranda FM online</title>
-<link rel="canonical" href="https://www.jacarandafm.com/listen-live/" itemprop="url">
-<meta name="keywords" content="Jacaranda FM">
-<meta name="description" content="Did you know that you can listen to Jacaranda FM online? Listen to our awesome music and amazing shows wherever you are, right here on the Jacaranda FM website." />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title itemprop="name">Jacaranda FM</title>
+<link rel="canonical" href="https://jacarandafm.live" itemprop="url">
+<meta name="keywords" content="Jacaranda FM, Music, Love, Audio, Player">
+<meta name="description" content="Playing the music you love" />
+<meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0">
 
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
   "@type": "Organization",
-  "url": "https://www.jacarandafm.com",
+  "url": "https://jacarandafm.live",
   "logo": "https://turntable.kagiso.io/core/images/jacaranda/logo_md.svg",
   "sameAs": [
     "https://www.facebook.com/Jacaranda942",
@@ -22,17 +22,17 @@
   ],
   "contactPoint": [{
     "@type": "ContactPoint",
-    "telephone": "+27 11 063 5700",
-    "contactType": "customer service"
+    "telephone": "+27 83 268 1117",
+    "contactType": "developer"
   }]
 }
 </script>
 
 <meta property="og:locale" content="en_GB" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Listen to Jacaranda FM online" />
-<meta property="og:description" content="Did you know that you can listen to Jacaranda FM online? Listen to our awesome music and amazing shows wherever you are, right here on the Jacaranda FM website." />
-<meta property="og:url" content="https://www.jacarandafm.com/listen-live/" />
+<meta property="og:title" content="Jacaranda FM" />
+<meta property="og:description" content="Playing the music you love" />
+<meta property="og:url" content="https://jacarandafm.live" />
 <meta property="og:site_name" content="Jacaranda FM" />
 <meta property="og:image" content="" />
 
