--- a/listen-live.html
+++ b/listen-live.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PZWWSYRHSF"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
 
-		gtag('config', 'G-PZWWSYRHSF');
-	</script>
+<head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZWWSYRHSF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PZWWSYRHSF');
+    </script>
     <!--<meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Jacaranda FM Live">
+    <meta name="apple-mobile-web-app-title" content="Jacaranda FM">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0">
-    <title>Listen Live</title>
+    <title>Jacaranda FM</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
         }
+
         iframe {
             position: fixed;
             top: 0;
@@ -48,9 +50,11 @@
         }
     </style>
 </head>
+
 <body>
-    <iframe id="player" allow="autoplay; encrypted-media; web-share" type="text/html allowfullscreen scrolling="auto" title="Jacaranda FM Player">
-        Your browser is not supported, so don't miss out on all the fun and get your own intelligent AI browser 
+    <iframe id="player" allow="autoplay; encrypted-media; web-share" type="text/html allowfullscreen scrolling=" auto"
+        title="Jacaranda FM Player">
+        Your browser is not supported, so don't miss out on all the fun and get your own intelligent AI browser
         <a href="http://www.microsoft.com/en-us/edge">Microsoft Edge</a> for free.
     </iframe>
     <script defer>
@@ -68,4 +72,5 @@
         window.addEventListener('resize', setPlayerSource);
     </script>
 </body>
+
 </html>
